--- a/components/teste-header.html
+++ b/components/teste-header.html
@@ -4,20 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <title>Schneider Electric · The most sustainable company in the world.</title>
 
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
-    <!-- Favicons -->
-    <link rel="icon" href="../img/logo-schneider.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="../img/logo-schneider.png" sizes="16x16" type="image/png">
-
     <!-- stylesheet -->
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/carousel.css">
 
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Righteous&display=swap" rel="stylesheet">
 
     <!-- bootstrap -->
-    <script src="../js/color-modes.js"></script>
+    <!-- <script src="../js/color-modes.js"></script> -->
     <link href="https://getbootstrap.com/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
     <meta name="theme-color" content="#97d700">
@@ -58,7 +50,7 @@
 
     <header class="navbar navbar-expand-lg bd-navbar sticky-top">
         <nav class="container-xxl bd-gutter flex-wrap flex-lg-nowrap" aria-label="Main navigation">
-            <a class="navbar-brand p-0 me-0 me-lg-4" href="/">
+            <a class="navbar-brand p-0 me-0 me-lg-4" href="#">
                 <img src="../img/logo-schneider.png" width="100" height="32" class="d-block my-1">
             </a>
 
@@ -83,27 +75,19 @@
                     <hr class="d-lg-none text-white-50">
                     <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav">
                         <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="#"
-                                onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Docs</a>
+                            <a class="nav-link py-2 px-0 px-lg-2" id="aaa">Sustainability</a>
                         </li>
                         <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="#"
-                                onclick="ga('send', 'event', 'Navbar', 'Community links', 'Examples');">Examples</a>
+                            <a class="nav-link py-2 px-0 px-lg-2" href="#">Ethics</a>
                         </li>
                         <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="#"
-                                onclick="ga('send', 'event', 'Navbar', 'Community links', 'Icons');" target="_blank"
-                                rel="noopener">Icons</a>
+                            <a class="nav-link py-2 px-0 px-lg-2" href="#">Examples</a>
                         </li>
                         <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="#"
-                                onclick="ga('send', 'event', 'Navbar', 'Community links', 'Themes');" target="_blank"
-                                rel="noopener">Themes</a>
+                            <a class="nav-link py-2 px-0 px-lg-2" href="#" target="_blank">Pitch</a>
                         </li>
                         <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="#"
-                                onclick="ga('send', 'event', 'Navbar', 'Community links', 'Blog');" target="_blank"
-                                rel="noopener">Blog</a>
+                            <a class="nav-link py-2 px-0 px-lg-2" href="#">About</a>
                         </li>
                     </ul>
 
