--- a/components/teste-footer.html
+++ b/components/teste-footer.html
@@ -14,7 +14,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Righteous&display=swap" rel="stylesheet">
-
+    
+    <!-- bootstrap 5 link -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
+   
     <!-- bootstrap -->
     <script src="../js/color-modes.js"></script>
     <link href="https://getbootstrap.com/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -41,11 +45,11 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="#">Home</a></li>
-                        <li class="mb-2"><a href="#">Sustainability</a></li>
-                        <li class="mb-2"><a href="#">Ethics</a></li>
-                        <li class="mb-2"><a href="#">Examples</a></li>
-                        <li class="mb-2"><a href="#">Pitch</a></li>
-                        <li class="mb-2"><a href="#">About</a></li>
+                        <li class="mb-2"><a href="#">Sustentabilidade</a></li>
+                        <li class="mb-2"><a href="#">Éticas</a></li>
+                        <li class="mb-2"><a href="#">Exemplos</a></li>
+                        <li class="mb-2"><a href="#">Vídeo Pitch</a></li>
+                        <li class="mb-2"><a href="#">Sobre o projeto</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-2">
