--- a/css/style.css
+++ b/css/style.css
@@ -41,15 +41,9 @@ p{
 }
 /*************** Line ***************/
 .line{
-    height: 6px;
+    height: 5px;
     width: 30%;
-    background: #97D700;
-    display: inline-block;
-}
-.line-hunger{
-    height: 6px;
-    width: 25%;
-    background: #97D700;
+    background: #9cd65d;
     display: inline-block;
 }
 
@@ -70,12 +64,10 @@ p{
     height: 50px;
     width: 25%;
     outline: none;
-    border: 1.5px solid black;
-    color: black;
-    background: transparent;
+    border: 1.5px solid;
+    background-color: transparent;
     border-radius: 50px;
-    transition: all 0.4;
-    text-decoration: none;
+    transition: all 0.4s;
 }
 .mbtn2{
     height: 50px;
@@ -90,12 +82,10 @@ p{
     height: 50px;
     width: 25%;
     outline: none;
-    border: none;
-    color: white;
-    background: #97D700;
+    border: 1.5px solid;
+    background-color: transparent;
     border-radius: 50px;
-    transition: all 0.4;
-    text-decoration: none;
+    transition: all 0.4s;
 }
 /* button - style */
 .mbtn1:hover, .mbtn1:active, .mbtn1:visited, .mbtn1:link{
@@ -109,14 +99,9 @@ p{
     color: white;
 }
 .mbtn3:hover, .mbtn3:active, .mbtn3:visited, .mbtn3:link{
-    height: 50px;
-    width: 25%;
-    outline: none;
-    border: 1.5px solid;
-    background-color: transparent;
-    color: #97D700;
-    border-radius: 50px;
-    transition: all 0.4s;
+    background-color: #af68d7;
+    color: #fff;
+    border: none;
 }
 /*************** What is Sustainability ****************/
 .img-sust-meaning{  
@@ -171,6 +156,47 @@ p{
 .sust-benefits p:nth-child(2){
     font-size: 18px;
     color: #979A9A;
+}
+
+/*************** Sobre o Projeto ****************/
+.member h1{
+    font-size: 3rem;
+    font-weight: bold;
+}
+.member-image{
+    height: 10em;
+    width: 10em;
+    border-radius: 50%;
+    border: 4px solid;
+    padding: 3px;
+    margin-bottom: 1em;
+}
+.member-image img{
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.img-member{  
+    margin-left: 10px;
+    margin-top: 140px;
+}
+.member-title{
+    font-size: 1.5rem;
+    font-weight: 500;
+    position: relative;
+    top: .2em;
+}
+.member-position{
+    color: #9ae14b;
+}
+.member-text{
+    text-align: justify;
+    font-size: 14px;
+    margin: 1em 0;
+}
+.space{
+    padding: 218.9px;
 }
 
 /*************** Bootstrap Custom ****************/
