--- a/components/footer.html
+++ b/components/footer.html
@@ -1,95 +1,87 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" data-bs-theme="auto">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>World Hunger</title>
-  <!-- browser icon -->
-  <link rel="icon" href="../img/logo-schneider.png" type="image/png">
-  <!-- stylesheet -->
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/style-footer.css">
-  <!-- bootstrap 5 link -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
-  <!-- bootstrap icons-->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <!-- google fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Righteous&display=swap" rel="stylesheet">
-  <!-- script jquery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <!-- javascript header & footer function -->
-  <!-- <script rel="javascript" src="./js/dark-theme.js"></script> -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <title>Schneider Electric · The most sustainable company in the world.</title>
+
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="../css/style.css">
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Righteous&display=swap" rel="stylesheet">
+    
+    <!-- bootstrap 5 link -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
+   
+    <!-- bootstrap -->
+    <script src="../js/color-modes.js"></script>
+    <link href="https://getbootstrap.com/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    
+    <meta name="theme-color" content="#97d700">
 </head>
+
 <body>
-    <footer class="footer bg-color">
-    <div class="container bg-color">
-        <div class="row bg-color">
-            
-            <div class="col-lg-3 my-2 pr-4 bg-color">
-                <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/"
-                    aria-label="Bootstrap">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="d-block me-2"
-                        viewBox="0 0 118 94" role="img">
-                        <title>Bootstrap</title>
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                            d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
-                            fill="currentColor" />
-                    </svg>
-                    <span class="fs-5">Bootstrap</span>
-                </a>
-                <ul class="list-unstyled small">
-                    <li class="mb-2">Designed and built with all the love in the world by the <a
-                            href="/docs/5.3/about/team/">Bootstrap team</a> with the help of <a
-                            href="https://github.com/twbs/bootstrap/graphs/contributors">our contributors</a>.</li>
-                    <li class="mb-2">Code licensed <a href="https://github.com/twbs/bootstrap/blob/main/LICENSE"
-                            target="_blank" rel="license noopener">MIT</a>, docs <a
-                            href="https://creativecommons.org/licenses/by/3.0/" target="_blank"
-                            rel="license noopener">CC BY 3.0</a>.</li>
-                    <li class="mb-2">Currently v5.3.0.</li>
-                </ul>
-                <h4 class="mt-5 bg-color">Follow us</h4>
-                <div class="line-footer mb-3"></div>
-                <h2 class="bg-color">
-                    <a class="m-0 bg-color" href="#"><i class="bi bi-facebook bg-color"></i></a>
-                    <a class="m-2 bg-color"></a>
-                    <a class="m-2 bg-color" href="#"><i class="bi bi-twitter bg-color"></i></a>
-                    <a class="m-2 bg-color" href="#"><i class="bi bi-instagram bg-color"></i></a>
-                    <a class="m-2 bg-color" href="#"><i class="bi bi-linkedin bg-color"></i></a>
-                </h2>
+    <footer class="bd-footer py-md-5 bg-body-tertiary">
+        <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
+            <div class="row">
+                <div class="col-lg-3 mb-3">
+                    <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/"
+                        aria-label="Bootstrap">
+                        <img src="../img/small-logo-schneider.png" width="40" height="32" title="Schneider Electric">
+                        <span class="fs-5">&nbsp;Schneider Electric</span>
+                    </a>
+                    <ul class="list-unstyled small">
+                        <li class="mb-2">Copyright 2023. All rights reserved</li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-2 offset-lg-1">
+                    <h5>Links</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="../index.html">Home</a></li>
+                        <li class="mb-2"><a href="../sustentabilidade.html">Sustentabilidade</a></li>
+                        <li class="mb-2"><a href="#">Éticas</a></li>
+                        <li class="mb-2"><a href="#">Exemplos</a></li>
+                        <li class="mb-2"><a href="#">Vídeo Pitch</a></li>
+                        <li class="mb-2"><a href="../sobre-o-projeto.html">Sobre o projeto</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-2">
+                    <h5>Guides</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="#">Getting started</a></li>
+                        <li class="mb-2"><a href="#">Starter template</a></li>
+                        <li class="mb-2"><a href="#">Webpack</a></li>
+                        <li class="mb-2"><a href="#">Parcel</a></li>
+                        <li class="mb-2"><a href="#">Vite</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-2">
+                    <h5>Social</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="#">Instagram</a></li>
+                        <li class="mb-2"><a href="#">Facebook</a></li>
+                        <li class="mb-2"><a href="#">Twitter</a></li>
+                        <li class="mb-2"><a href="#">Linkedin</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-2">
+                    <h5>Community</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="#">FAQs</a></li>
+                        <li class="mb-2"><a href="#">Discussions</a></li>
+                        <li class="mb-2"><a href="#">Corporate Sponsors</a></li>
+                        <li class="mb-2"><a href="#">Terms & Conditions</a></li>
+                        <li class="mb-2"><a href="#">Privacy</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-lg-3 ml-4 my-2 bg-color">
-                <h4  class="bg-color">Company</h4>
-                <div class="line-footer mb-3"></div>
-                <li class="bg-color"><a class="text-light bg-color" href="#">About us</a></li>
-                <li class="bg-color"><a class="text-light bg-color" href="#">Our services</a></li>
-                <li class="bg-color"><a class="text-light bg-color" href="#">Privacy policy</a></li>
-                <li class="bg-color"><a class="text-light bg-color" href="#">Affiliate program</a></li>
-            </div>
-            <div class="col-lg-3 my-2 bg-color">
-                <h4 class="bg-color">Help</h4>
-                <div class="line-footer mb-3"></div>
-                <li class="bg-color"><a class="text-light bg-color" href="#">About us</a></li>
-                <li class="bg-color"><a class="text-light bg-color" href="#">Our services</a></li>
-                <li class="bg-color"><a class="text-light bg-color" href="#">Privacy policy</a></li>
-                <li class="bg-color"><a class="text-light bg-color" href="#">Affiliate program</a></li>
-            </div>
-            <div class="col-lg-3 my-2 bg-color">
-                <h4 class="bg-color">Something</h4>   
-                <div class="line-footer mb-3"></div>            
-                <li class="bg-color"><a class="text-light bg-color" href="#">About us</a></li>
-                <li class="bg-color"><a class="text-light bg-color" href="#">Our services</a></li>
-                <li class="bg-color"><a class="text-light bg-color" href="#">Privacy policy</a></li>
-                <li class="bg-color"><a class="text-light bg-color" href="#">Affiliate program</a></li>
-            </div>
-            
         </div>
-    </div>
-</footer>   
+    </footer>
 </body>
 </html>
-
-
