Projeto final (com as páginas teste)

--- a/components/footer.html
+++ b/components/footer.html
@@ -37,7 +37,7 @@
                         <span class="fs-5">&nbsp;Schneider Electric</span>
                     </a>
                     <ul class="list-unstyled small">
-                        <li class="mb-2">Copyright 2023. All rights reserved</li>
+                        <li class="mb-2">Copyright 2023. Todos os direitos reservados.</li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-2 offset-lg-1">
